--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.20",
     "@types/react-dom": "^17.0.9",
     "@types/styled-components": "^5.1.14",
+    "immutability-helper": "^3.1.1",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dnd": "^14.0.3",
